--- a/musci.html
+++ b/musci.html
@@ -6,29 +6,39 @@
 </head>
 <body>
 <h1>Trang phát nhạc </h1>
+<a href="index.html">Quay lại </a>
+
 <form>
-    <fieldset id="demo">
-        <legend>Thêm nhạc mới </legend>
-        <input type="text" id="music-name" placeholder="Input music name...">
-        <input type="text" id="music-singer" placeholder="Input music...">
-        <input type="text" id="music- category" placeholder="Input music category...">
-<!--        <button class="music" type="button" onclick="addMusic()">Add</button>-->
-    </fieldset>
+<fieldset id="demo">
+    <legend>Thêm nhạc mới</legend>
+    <input type="text" id="name" placeholder="Nhập tên nhạc...">
+    <input type="text" id="music" placeholder="Thêm nhạc...">
+    <input type="text" id="singer" placeholder="Nhập tên ca sĩ...">
+    <input type="text" id="category" placeholder="Nhập tên thể loại...">
+
+    <button type="button" onclick="addMusics()">Thêm</button>
+
+
+</fieldset>
 </form>
 
 <table class="table" border="1px solid">
     <thead>
     <th scope="col">STT</th>
-    <th scope="col">Tên nhạc </th>
-    <th scope="col">Nhạc </th>
-    <th scope="col">Ca sĩ </th>
-    <th scope="col">Thể loại </th>
+    <th scope="col">Tên nhạc</th>
+    <th scope="col">Nhạc</th>
+    <th scope="col">Ca sĩ</th>
+    <th scope="col">Thể loại</th>
     </thead>
     <tbody>
     <tr>
         <th scope="row">1</th>
         <td>The Thai</td>
-        <td><audio controls><source src ="audio/bai1.mp3"></audio></td>
+        <td>
+            <audio controls>
+                <source src="audio/bai1.mp3">
+            </audio>
+        </td>
         <td>hung ly</td>
         <td>nhac tre</td>
     </tr>
@@ -36,7 +46,11 @@
         <th scope="row">2</th>
         <td>The Thai</td>
 
-        <td><audio controls><source src ="audio/bai1.mp3"></audio></td>
+        <td>
+            <audio controls>
+                <source src="audio/bai1.mp3">
+            </audio>
+        </td>
         <td>hung ly</td>
         <td>nhac tre</td>
     </tr>
@@ -44,7 +58,11 @@
         <th scope="row">3</th>
         <td>The Thai</td>
 
-        <td><audio controls><source src ="audio/bai1.mp3"></audio></td>
+        <td>
+            <audio controls>
+                <source src="audio/bai1.mp3">
+            </audio>
+        </td>
         <td>hung ly</td>
         <td>nhac tre</td>
     </tr>
@@ -52,36 +70,19 @@
         <th scope="row">4</th>
         <td>The Thai</td>
 
-        <td><audio controls><source src ="audio/bai1.mp3"></audio></td>
+        <td>
+            <audio controls>
+                <source src="audio/bai1.mp3">
+            </audio>
+        </td>
         <td>hung ly</td>
         <td>nhac tre</td>
 
     </tr>
     </tbody>
 
-
 </table>
 
-<script>
-    let music = '';
-
-    function display() {
-        let str = `<tr>
-                    <th>STT</th>
-                    <th>Name</th>
-                    <th>Music</th>
-                        </tr>`
-        for (let i = 0; i < music.length; i++) {
-            str += `<tr>
-                        <td>${i + 1}</td>
-                        <td>${music[i][0]}</td>
-                        <td>${music[i][1]}</td>
-                            </tr>`
-        }
-        document.getElementById("music").innerHTML = str;
-    }
-    display();
-</script>
 </body>
 </html>
 <style>
@@ -103,13 +104,28 @@
     body {
         background-image: url("https://i.pinimg.com/originals/9b/53/36/9b533610afe276cce783a0c52fb959ad.png");
         background-size: cover;
-        text-align: center;
     }
 
     table {
+        margin-top: 25px;
         width: 100%;
         border-collapse: collapse;
         text-align: center;
         font-size: 20px;
+
     }
+
+    a {
+        background-color: cadetblue;
+        border-radius: 20px;
+        padding: 5px 15px;
+    }
+
+    .form-container {
+        margin-top: 10px;
+    }
+    fieldset{
+        margin-top: 20px;
+    }
+
 </style>
