--- a/musci.html
+++ b/musci.html
@@ -8,25 +8,25 @@
 <h1>Trang phát nhạc </h1>
 <a href="index.html">Quay lại </a>
 
-<form>
-<fieldset id="demo">
-    <legend>Thêm nhạc mới</legend>
-    <input type="text" id="name" placeholder="Nhập tên nhạc...">
-    <input type="text" id="music" placeholder="Thêm nhạc...">
-    <input type="text" id="singer" placeholder="Nhập tên ca sĩ...">
-    <input type="text" id="category" placeholder="Nhập tên thể loại...">
+<!--<form>-->
+<!--<fieldset id="demo">-->
+<!--    <legend>Thêm nhạc mới</legend>-->
+<!--    <input type="text" id="name" placeholder="Nhập tên nhạc...">-->
+<!--    <input type="file" id="music" placeholder="Thêm nhạc...">-->
+<!--    <input type="text" id="singer" placeholder="Nhập tên ca sĩ...">-->
+<!--    <input type="text" id="category" placeholder="Nhập tên thể loại...">-->
 
-    <button type="button" onclick="addMusics()">Thêm</button>
+<!--    <button type="button" onclick="addMusics()">Thêm</button>-->
 
 
-</fieldset>
-</form>
+<!--</fieldset>-->
+<!--</form>-->
 
 <table class="table" border="1px solid">
     <thead>
     <th scope="col">STT</th>
-    <th scope="col">Tên nhạc</th>
-    <th scope="col">Nhạc</th>
+    <th scope="col">Tên bài hát </th>
+    <th scope="col">Nhạc </th>
     <th scope="col">Ca sĩ</th>
     <th scope="col">Thể loại</th>
     </thead>
@@ -48,7 +48,7 @@
 
         <td>
             <audio controls>
-                <source src="audio/bai1.mp3">
+                <source src="audio/bai2.mp3">
             </audio>
         </td>
         <td>hung ly</td>
@@ -60,7 +60,7 @@
 
         <td>
             <audio controls>
-                <source src="audio/bai1.mp3">
+                <source src="audio/bai3.mp3">
             </audio>
         </td>
         <td>hung ly</td>
@@ -72,7 +72,7 @@
 
         <td>
             <audio controls>
-                <source src="audio/bai1.mp3">
+                <source src="audio/bai4.mp3">
             </audio>
         </td>
         <td>hung ly</td>
