--- a/Musics.html
+++ b/Musics.html
@@ -39,7 +39,7 @@
 
     body {
 
-        background-image: url("https://lh3.googleusercontent.com/proxy/ecQBaaljQMg7fU3OXerUMOy7h__5z1oe23wZ7iy0UA-OKsWBTcaisCbugXFCXBE99rYAsgFfMmaJAfsp1hqCG-6yaU0VOZutF4drAgrQFrPnGPFUvpC4tFtF3xLsqhJ6Nn2OrOPjNHWmHtEtjCYx");
+        background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTckVbR5g3FllgAGeATa1nYjS-Tr-PYgN57yA&usqp=CAU");
         background-size: cover;
     }
 
