--- a/musci.html
+++ b/musci.html
@@ -33,50 +33,50 @@
     <tbody>
     <tr>
         <th scope="row">1</th>
-        <td>The Thai</td>
+        <td>Chỉ có thể là yêu </td>
         <td>
             <audio controls>
                 <source src="audio/bai1.mp3">
             </audio>
         </td>
-        <td>hung ly</td>
-        <td>nhac tre</td>
+        <td>Ngô Kiến Huy</td>
+        <td>Nhạc trẻ </td>
     </tr>
     <tr>
         <th scope="row">2</th>
-        <td>The Thai</td>
+        <td>Đường về nhà </td>
 
         <td>
             <audio controls>
                 <source src="audio/bai2.mp3">
             </audio>
         </td>
-        <td>hung ly</td>
-        <td>nhac tre</td>
+        <td>Ái  Phương </td>
+        <td>Nhạc trẻ </td>
     </tr>
     <tr>
         <th scope="row">3</th>
-        <td>The Thai</td>
+        <td>Hoa nở không màu </td>
 
         <td>
             <audio controls>
                 <source src="audio/bai3.mp3">
             </audio>
         </td>
-        <td>hung ly</td>
-        <td>nhac tre</td>
+        <td>Hoài Lâm </td>
+        <td>Nhạc trẻ </td>
     </tr>
     <tr>
         <th scope="row">4</th>
-        <td>The Thai</td>
+        <td>Nàng thơ </td>
 
         <td>
             <audio controls>
                 <source src="audio/bai4.mp3">
             </audio>
         </td>
-        <td>hung ly</td>
-        <td>nhac tre</td>
+        <td>Hoàng Dũng </td>
+        <td>Nhạc trẻ </td>
 
     </tr>
     </tbody>
