--- a/Musics.html
+++ b/Musics.html
@@ -46,7 +46,7 @@
 </style>
 <body>
 <h1>Trang lưu thông tin bài hát  </h1>
-<a href="index.html">Quay lại </a>
+<a href="demo.html">Quay lại </a>
 <table id="play-music" border="1px solid"></table>
 <script>
     let playMusic = loadData();
