--- a/musci.html
+++ b/musci.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Trang phát nhạc </h1>
-<a href="index.html">Quay lại </a>
+<a href="demo.html">Quay lại </a>
 
 <!--<form>-->
 <!--<fieldset id="demo">-->
