--- a/demo.html
+++ b/demo.html
@@ -1,45 +1,140 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        h1 {
+            text-align: center;
+        }
+    </style>
+
+
 </head>
 <body>
-<h1>
-    <marquee> Trang nhạc thịnh hành do bà Đào quản lý</marquee>
-</h1>
-<br>
-<a href="index.html"> Vào trang </a>
+<h1>Trang quản lý nhạc </h1>
+<div class="text">
+    <a href="Musics.html" style="color: red" target="_blank">HOME USER</a>
+</div>
+
+<a class="header" href="index.html">Quay lại </a>
+<a class="name" href="musci.html"> Trang phát nhạc </a>
+<input type="text" id="myInput" onkeyup="searchMusic()" placeholder="Tìm kiếm ">
+
+<form>
+        <input type="text" id="music-name" placeholder="Nhập tên bài hát..."><br>
+        <input type="text" id="music-singer" placeholder="Nhập tên ca sĩ..."><br>
+        <input type="text" id="music-category" placeholder="Nhập tên thể loại..."><br>
+        <input class="ha" type="text" id="music-img" placeholder="Thêm ảnh..."><br>
+        <button class="music" type="button" onclick="addMusic()">Thêm</button>
+        <button type="button" onclick="updateMusic()">Sửa</button>
+
+</form>
+<table id="management" border="1px solid">
+</table>
+
+<script src="Management-Music.js"></script>
+<script src="Music.js"></script>
 
 </body>
+
+
 </html>
 <style>
+    fieldset {
+        margin-bottom: 10px;
+        font-size: 20px;
+    }
+
     * {
         margin: 0;
+
+    }
+    .ha{
+        margin-bottom: 10px;
+        font-size: 15px;
+    }
+
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        font-size: 20px;
     }
 
     h1 {
-        background-color: darkseagreen;
-
+        color: darkviolet;
+        margin-bottom: 10px;
+        font-size: 40px;
     }
 
-    body {
-        background-image: url("https://img4.thuthuatphanmem.vn/uploads/2020/12/26/hinh-anh-cam-thu-am-nhac_050508147.jpg");
-        background-size: cover;
+    .music {
+        background-color: chartreuse;
+    }
+
+    button {
+        border: 10px;
+        background-color: orange;
+        border-radius: 10px;
+        font-size: 15px;
+        margin-bottom: 20px;
+    }
+
+    .sum {
+        color: white;
+        background-color: red;
+    }
+
+    .name {
+        margin-left: 1000px;
+        background-color: cadetblue;
+        border-radius: 20px;
+        padding: 7px 15px;
+    }
+
+    th {
+        background-color: darkseagreen;
+        /*text-align: center;*/
+    }
+
+    legend {
+
+        color: darkred
+    }
+
+    td {
         text-align: center;
     }
 
-    a {
-        margin-top: 30px;
-        /*position: relative;*/
-        background-color: cadetblue;
-        top: 370px;
-        border: 1px;
-        padding: 10px 20px;
+    body {
+        background-image: url("https://tuyensinh.tdmu.edu.vn/img/ckeditor/images/am2.png");
+        background-size: cover;
+    }
+
+    .text {
         border-radius: 20px;
-        margin-left: 1070px;
-        font-size: 30px;
+        padding: 5px 15px;
+        margin-top: 15px;
 
     }
+
+
+    form {
+        margin-top: 10px;
+    }
+
+    input {
+        margin-top: 20px;
+        font-size: 15px;
+        border-radius: 10px;
+    }
+
+    .header {
+        background-color: cadetblue;
+        border-radius: 20px;
+        padding: 5px 15px;
+        margin-left: 10px;
+        width: 60px
+    }
+
+
 </style>
